--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Footer</title>
-</head>
-<body>
     <footer>
-        <p>&copy; <%= new Date().getFullYear() %> Your Company Name. All rights reserved.</p>
+        <p>&copy; 2025 Your Company Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
