--- a/src/views/entries.ejs
+++ b/src/views/entries.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header', { pageTitle: "Entries" }) %>
 <div class="container">
     <h1>Entries</h1>
-    <a href="/form" class="btn">Create New Entry</a>
+    <a href="/entries/new" class="btn">Create New Entry</a>
     <table>
         <thead>
             <tr>
