--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Upload App - <%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Upload App - <%= pageTitle %>
+  </title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <header>
-        <h1>Image Upload Application</h1>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/entries">Entries</a></li>
-                <li><a href="/form">New Entry</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Image Upload Application</h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/entries">Entries</a></li>
+        <li><a href="/entries/new">New Entry</a></li>
+      </ul>
+    </nav>
+  </header>
