--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Upload App - <%= pageTitle %>
   </title>
-  <link rel="stylesheet" href="/css/style.css">
+  <%- assetsCSS.map(asset=> `
+    <link rel="stylesheet" href="${asset}">`).join("") %>
 </head>
 
 <body>
